My first commit

--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,47 @@
 .App {
+  text-align: left;
+  
+}
+.nav_list li{
+  display: inline;
+  padding: 10px;
+  align-items: right;
+}
+.nav_list li{
+  display: inline;
+  padding: 10px;
+  align-items: right;
+}
+.nav_list li a{
+  color: #a1a1a1;
+  padding: 5px;
+  text-decoration: dashed;
+}
+.nav_list{
+  background-attachment: fixed;
+  position: relative;
+  background-color: aqua;
+  margin: auto;
+  padding: 5px;
+}
+.nav_right{
+  text-align: right;
+}
+.footer{
+  position: relative;
+  background-attachment: fixed;
+  background-color:#61dafb;
   text-align: center;
+  width:100%;
+  bottom: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: right;
+  justify-content: right;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -27,6 +49,83 @@
 .App-link {
   color: #61dafb;
 }
+/* Product List */
+.product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.product {
+  flex: 0 0 20%;
+  box-sizing: border-box;
+  margin: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 16px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s;
+}
+
+.product:hover {
+  transform: scale(1.05);
+}
+
+.product img {
+  width: 10%;
+  height: auto;
+}
+
+.product-image-container {
+  position: relative;
+}
+
+.product-hover-options {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.product:hover .product-hover-options {
+  opacity: 1;
+}
+
+.option-button {
+  margin: 5px 0;
+  padding: 10px 20px;
+  border: none;
+  background-color: #fff;
+  color: #000;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.option-button:hover {
+  background-color: #ddd;
+}
+
+.badge {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  background-color: gold;
+  padding: 5px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
 
 @keyframes App-logo-spin {
   from {
